# rsjfw-reborn

./: .gitignore  CMakeLists.txt  LICENSE  README.md  manual_test.sh
include/: async_image_loader.h  common.h  config.h  credential_manager.h  diagnostics.h  discovery_manager.h  font_icons.h  font_roboto.h  gpu_manager.h  gui.h  http.h  logger.h  logo_data.h  logo_wide_data.h  orchestrator.h  path_manager.h  prefix.h  preset_manager.h  proton.h  rc4.h  registry.h  roblox_api.h  rsjfw.h  runner.h  runner_manager.h  streambuf.h  umu.h  wine.h  zip_util.h
include/downloader/: dxvk_manager.h  github_client.h  github_types.h  roblox_manager.h  wine_manager.h
include/gui/: icons.h  view.h
include/gui/views/: diagnostics_view.h  dxvk_view.h  env_view.h  fflags_view.h  general_view.h  home_view.h  runner_view.h  troubleshoot_view.h
include/os/: cmd.h
src/: async_image_loader.cpp  config.cpp  credential_manager.cpp  diagnostics.cpp  discovery_manager.cpp  gpu_manager.cpp  gui.cpp  http.cpp  logger.cpp  main.cpp  orchestrator.cpp  prefix.cpp  preset_manager.cpp  proton.cpp  registry.cpp  roblox_api.cpp  runner.cpp  runner_manager.cpp  streambuf.cpp  umu.cpp  wine.cpp  zip_util.cpp
src/downloader/: dxvk_manager.cpp  github_client.cpp  roblox_manager.cpp  wine_manager.cpp
src/gui/: view_home.cpp
src/gui/views/: diagnostics_view.cpp  dxvk_view.cpp  env_view.cpp  fflags_view.cpp  general_view.cpp  home_view.cpp  runner_view.cpp  troubleshoot_view.cpp
src/layer/: CMakeLists.txt  VkLayer_rsjfw_fixes.json.in  layer.cpp
src/os/: cmd.cpp
tests/: reg_convert.cpp  registry_test.cpp  registry_verify.cpp
